--- a/UFO-Sightings/readme
+++ b/UFO-Sightings/readme
@@ -1,3 +1,3 @@
-## UFO sightings
+**UFO sightings**
 
 Data and notebook written in kaggle from URL: https://www.kaggle.com/datasets/willianoliveiragibin/ufo-sightings 
